--- a/styles.css
+++ b/styles.css
@@ -118,3 +118,71 @@ header nav a:hover {
     color: var(--main-color);
     text-decoration: none;
 }
+
+/* Header Section Design End */
+.home-section {
+    background-image: linear-gradient(90deg, rgba(0, 0, 0, 1) 25%, rgba(0, 0, 0, 0.5861695019804797) 47%),
+        linear-gradient(180deg, rgba(0, 0, 0, 0) 96%, rgba(0, 0, 0, 1) 100%), url(images/coffe-home.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: calc(100vh - 100px);
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+
+.home-content {
+    position: absolute;
+    left: 50px;
+    color: #FFF;
+    transition: .5s ease-in-out;
+}
+
+.home-content h1 {
+    font-size: 3.5rem;
+}
+
+.home-content p {
+    font-size: 14px;
+    color: #f9f9f9;
+}
+
+.home-content .home-links {
+    display: flex;
+    margin-top: 30px;
+}
+
+.home-links a {
+    text-decoration: none;
+    text-transform: capitalize;
+    color: #FFF;
+    background: var(--main-color);
+    display: inline-block;
+    padding: 11px 20px;
+    border-radius: 5px;
+    border: 1px solid var(--main-color);
+    transition: .4s ease-in-out;
+}
+
+.home-links .first {
+    margin-right: 20px;
+}
+
+.home-links .second a {
+    background: transparent;
+    border: 1px solid #333;
+}
+
+.home-links .first a:hover {
+    background: transparent;
+    color: var(--main-color);
+}
+
+.home-links .second a:hover {
+    background-color: var(--main-color);
+    color: #fff;
+}
+
+/* Home Section Design End */
