--- a/styles.css
+++ b/styles.css
@@ -186,3 +186,168 @@ header nav a:hover {
 }
 
 /* Home Section Design End */
+
+.bg-shop {
+    width: 90%;
+    margin: 100px auto;
+}
+
+.bg-shop .shop-links {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 40px;
+    align-items: center;
+    color: #FFF;
+}
+
+.shop-links h2 {
+    text-transform: capitalize;
+    font-family: 'Pushster', cursive;
+}
+
+.shop-links .links {
+    display: flex;
+    align-items: center;
+}
+
+.shop-links .links li {
+    margin-left: 20px;
+    text-transform: uppercase;
+    cursor: pointer;
+    transition: .4 ease-in-out;
+}
+
+.shop-links .links li:hover {
+    color: var(--main-color);
+}
+
+.bg-shop .shop-flex {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+    grid-row-gap: 20px;
+}
+
+.shop-flex .shop1 {
+    width: 24%;
+    color: #fff;
+    margin-bottom: 30px;
+}
+
+.shop1 .shop-image {
+    position: relative;
+    overflow: hidden;
+    background: #212529;
+    padding: 50px 20px;
+    margin-bottom: 20px;
+    width: 80%;
+}
+
+.shop-image img {
+    width: 90%;
+    margin-left: 10px;
+    justify-content: center;
+    display: flex;
+
+}
+
+.stars {
+    color: white;
+    width: 100%;
+}
+
+.shop-image .price {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    border: 1px solid var(--main-color);
+    padding: 6px 15px;
+    border-radius: 20px;
+    font-size: 11px;
+    font-weight: bold;
+}
+
+.shop-image .social {
+    position: absolute;
+    bottom: 30px;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: -100px;
+}
+
+.shop-image .social a {
+    text-decoration: none;
+    color: #FFf;
+    font-size: 10px;
+    border: 1px solid #fff;
+    padding: 3px 5px;
+}
+
+.shop-image .social a:hover {
+    border-color: var(--main-color);
+    color: var(--main-color);
+}
+
+.shop-image:hover .social {
+    animation: animatel .6s ease-in-out forwards;
+}
+
+.shop-image .social {
+    animation: animate2 .6 ease-in-out;
+}
+
+@keyframes animatel {
+    0% {
+        opacity: 0;
+        bottom: -100px;
+    }
+
+    100% {
+        opacity: 1;
+        bottom: 30px;
+    }
+}
+
+@keyframes animate2 {
+    0% {
+        opacity: 0;
+        bottom: -100px;
+    }
+
+    100% {
+        opacity: 1;
+        bottom: 30px;
+    }
+}
+
+.shop1 h2 {
+    text-transform: capitalize;
+    font-size: 1.8rem;
+    margin-bottom: 10px;
+}
+
+.shop1 .gold {
+    color: gold;
+}
+
+.shop1 .stars {
+    margin-bottom: 10px;
+}
+
+.shop1 .stars i {
+    margin: 0 -2px;
+    font-size: 12px;
+}
+
+.shop1 article {
+    font-size: 16px;
+    font-weight: bold;
+    margin-right: 5px;
+    display: inline-block;
+}
+
+.shop1 span {
+    text-decoration: line-through;
+    color: #555;
+}
