--- a/styles.css
+++ b/styles.css
@@ -351,3 +351,97 @@ header nav a:hover {
     text-decoration: line-through;
     color: #555;
 }
+
+
+.bg-menu {
+    width: 100%;
+    height: 100vh;
+    background-image: linear-gradient(90deg, rgba(0, 0, 0, 1) 25%, rgba(0, 0, 0, 0.5861695019804797) 47%),
+        linear-gradient(180deg, rgba(0, 0, 0, 0) 96%, rgba(0, 0, 0, 1) 100%), url(images/bac-1.jpg);
+    /* background: url(images/bac-1.jpg) no-repeat; */
+    background-size: cover;
+    padding: 50px 0px;
+    background-position: center;
+}
+
+.menu-title {
+    margin-bottom: 50px;
+    text-align: center;
+    color: #fff;
+}
+
+.menu-title section {
+    text-transform: uppercase;
+    font-size: 15px;
+    color: var(--main-color);
+}
+
+.menu-title h2 {
+    text-transform: capitalize;
+    font-size: 2.8rem;
+    font-weight: 400;
+    margin-top: 4px;
+    font-family: 'Rubik Doodle Triangles', cursive;
+}
+
+.menu-title hr {
+    margin: 15px auto;
+    width: 150px;
+    background: var(--main-color);
+}
+
+.menu-flex {
+    width: 90%;
+    margin: 0px auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.menu-flex .menu1 {
+    width: 49%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: #FFF;
+    margin-bottom: 20px;
+}
+
+.menu1 img {
+    width: 100px;
+    margin-right: 10px;
+}
+
+.menu1 h4 {
+    text-transform: capitalize;
+    letter-spacing: -1px;
+}
+
+.menu1 .line {
+    margin-top: 10px;
+    border-top: 1px dotted var(--main-color);
+    width: 52%;
+}
+
+.menu-link {
+    text-align: center;
+    margin: 30px 20px;
+    /* margin-bottom: 50px; */
+}
+
+.menu-link a {
+    text-decoration: none;
+    display: inline-block;
+    text-transform: capitalize;
+    color: #fff;
+    background: var(--main-color);
+    padding: 10px 18px;
+    transition: .4s ease-in-out;
+    border: 1px solid var(--main-color);
+}
+
+.menu-link a:hover {
+    background: transparent;
+}
+
